--- a/app/src/main/res/drawable/camera_button.xml
+++ b/app/src/main/res/drawable/camera_button.xml
@@ -3,10 +3,10 @@
 
     <item
         android:state_pressed="false"
-        android:drawable="@drawable/camera_but" />
+        android:drawable="@drawable/cam_btn" />
 
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/camera_but2" />
+        android:drawable="@drawable/cam_btn2" />
 
 </selector>
