--- a/app/src/main/res/drawable/music_button.xml
+++ b/app/src/main/res/drawable/music_button.xml
@@ -5,4 +5,8 @@
         android:state_pressed="false"
         android:drawable="@drawable/music" />
 
+    <item
+        android:state_pressed="true"
+        android:drawable="@drawable/music2" />
+
 </selector>
