--- a/app/src/main/res/layout/layout.xml
+++ b/app/src/main/res/layout/layout.xml
@@ -87,6 +87,7 @@
         android:layout_marginTop="7dp"
         android:layout_marginEnd="32dp"
         android:text="Wyśrodkuj"
+        android:background="@drawable/rounded_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/map" />
@@ -99,6 +100,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="15dp"
         android:text="Start"
+        android:background="@drawable/rounded_btn"
         app:layout_constraintEnd_toStartOf="@+id/stop_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/resetC_button" />
@@ -125,6 +127,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="32dp"
         android:text="Stop"
+        android:background="@drawable/rounded_btn"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/start_button"
         app:layout_constraintTop_toBottomOf="@+id/resetC_button" />
